[package]
name = "iowkit-sys"
version = "0.1.0"
edition = "2021"
authors = ["Florian Porsch"]
license = "MIT"
readme = "README.md"
keywords = ["iowarrior", "iowkit"]
categories = ["external-ffi-bindings", "hardware-support"]
repository = "https://github.com/Tederean/iowkit-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = ["/src/iowkit.h", "/src/bindgen.sh"]

[dependencies]
libloading = "^0.8"
