[package]
name = "iowkit-sys"
version = "0.1.1"
edition = "2021"
authors = ["Florian Porsch"]
license = "MIT"
readme = "README.md"
keywords = ["iowarrior", "iowkit"]
categories = ["external-ffi-bindings", "hardware-support"]
repository = "https://github.com/Tederean/iowkit-sys"
description = "Rust bindings for the Code Mercenaries iowkit library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = ["/src/iowkit.h", "/src/bindgen.sh"]

[dependencies]
libloading = "^0.8"
